:bug: Fix achievement alignment

--- a/src/settings-renderer/components/dialogs/AchievementsDialog.module.scss
+++ b/src/settings-renderer/components/dialogs/AchievementsDialog.module.scss
@@ -108,6 +108,7 @@
 
   .achievementData {
     flex-grow: 1;
+    flex-basis: 0;
   }
 
   .row {
@@ -124,6 +125,7 @@
     color: $text-muted;
     font-size: 0.9em;
     align-self: flex-start;
+    flex-shrink: 0;
   }
 }
 
